--- a/04_Multifile/Makefile
+++ b/04_Multifile/Makefile
@@ -19,15 +19,25 @@ liboutput.so:   fun.o const.o
 	cc -shared fun.o const.o -o liboutput.so
 
 test: prog prog-a prog-so
-	./prog
-	./prog test1
-	./prog test2-arg1 test2-arg2 test2-arg3
-	./prog-a
-	./prog-a test1
-	./prog-a test2-arg1 test2-arg2 test2-arg3
-	LD_LIBRARY_PATH=. ./prog-so
-	LD_LIBRARY_PATH=. ./prog-so test1
-	LD_LIBRARY_PATH=. ./prog-so test2-arg1 test2-arg2 test2-arg3
+	./prog 2>>errorfile >prog-test0
+	./prog test1 2>>errorfile >prog-test1
+	./prog test2-arg1 test2-arg2 test2-arg3 2>>errorfile >prog-test2
+	./prog-a 2>>errorfile >prog-a-test0
+	./prog-a test1 2>>errorfile >prog-a-test1
+	./prog-a test2-arg1 test2-arg2 test2-arg3 2>>errorfile >prog-a-test2
+	LD_LIBRARY_PATH=. ./prog-so 2>>errorfile >prog-so-test0
+	LD_LIBRARY_PATH=. ./prog-so test1 2>>errorfile >prog-so-test1
+	LD_LIBRARY_PATH=. ./prog-so test2-arg1 test2-arg2 test2-arg3  2>>errorfile >prog-so-test2
+	cmp prog-test0 prog-a-test0
+	cmp prog-test0 prog-so-test0
+	cmp prog-so-test0 prog-a-test0
+	cmp prog-test1 prog-a-test1
+	cmp prog-test1 prog-so-test1
+	cmp prog-so-test1 prog-a-test1
+	cmp prog-test2 prog-a-test2
+	cmp prog-test2 prog-so-test2
+	cmp prog-so-test2 prog-a-test2
+	
 
 fun.o:  outlib.h
 
@@ -35,4 +45,4 @@ clean:
 	rm -f $(TRASH)
 
 distclean:      clean
-	rm -rf $(GENERATES)
+	rm -rf $(GENERATES) *test*
