add output in file test

--- a/04_Multifile/Makefile
+++ b/04_Multifile/Makefile
@@ -28,15 +28,15 @@ test: prog prog-a prog-so
 	LD_LIBRARY_PATH=. ./prog-so 2>>errorfile >prog-so-test0
 	LD_LIBRARY_PATH=. ./prog-so test1 2>>errorfile >prog-so-test1
 	LD_LIBRARY_PATH=. ./prog-so test2-arg1 test2-arg2 test2-arg3  2>>errorfile >prog-so-test2
-	cmp prog-test0 prog-a-test0
-	cmp prog-test0 prog-so-test0
-	cmp prog-so-test0 prog-a-test0
-	cmp prog-test1 prog-a-test1
-	cmp prog-test1 prog-so-test1
-	cmp prog-so-test1 prog-a-test1
-	cmp prog-test2 prog-a-test2
-	cmp prog-test2 prog-so-test2
-	cmp prog-so-test2 prog-a-test2
+	cmp prog-test0 prog-a-test0 >>test
+	cmp prog-test0 prog-so-test0  >>test
+	cmp prog-so-test0 prog-a-test0  >>test
+	cmp prog-test1 prog-a-test1  >>test
+	cmp prog-test1 prog-so-test1  >>test
+	cmp prog-so-test1 prog-a-test1  >>test
+	cmp prog-test2 prog-a-test2  >>test
+	cmp prog-test2 prog-so-test2  >>test
+	cmp prog-so-test2 prog-a-test2  >>test
 	
 
 fun.o:  outlib.h
