--- a/04_Multifile/Makefile
+++ b/04_Multifile/Makefile
@@ -1,6 +1,6 @@
 GENERATES = prog prog-a prog-so test
 TRASH = *.o *~ o.* *.a *.so
-
+CFLAGS = -fPIC
 
 all:    prog prog-a prog-so test
 
@@ -16,7 +16,7 @@ liboutput_static.a:   fun.o const.o
 	ar -rcs liboutput_static.a const.o fun.o
 
 liboutput.so:   fun.o const.o
-	cc -shared -fPIC fun.o const.o -o liboutput.so
+	cc -shared $(CFLAGS) fun.o const.o -o liboutput.so
 
 test: prog prog-a prog-so
 	./prog 2>>errorfile >prog-test0
@@ -40,6 +40,7 @@ test: prog prog-a prog-so
 	
 
 fun.o:  outlib.h
+
 
 clean:
 	rm -f $(TRASH)
