--- a/05_Environmental/Makefile.am
+++ b/05_Environmental/Makefile.am
@@ -1,4 +1,7 @@
-AM_CFLAGS = -Wall -Werror -lncursesw -lpcre2-8
+AM_CFLAGS = -Wall -lncursesw -lpcre2-8
 
 bin_PROGRAMS = pcreshow
 pcreshow_SOURCES = pcreshow.c
+
+allclean:
+	git clean -fd
