--- a/05_Environmental/configure.ac
+++ b/05_Environmental/configure.ac
@@ -2,7 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([pcreshow], [1.0], [BUG-REPORT-ADDRESS])
+AC_INIT([PCRE show], [1.0], [ac17@bk.ru])
+AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([pcreshow.c])
 AC_CONFIG_HEADERS([config.h])
 
@@ -11,11 +12,12 @@ AC_PROG_CC
 AM_INIT_AUTOMAKE
 
 # Checks for libraries.
-# FIXME: Replace `main' with a function in `-lncursesw':
-AC_CHECK_LIB([ncursesw], [main])
+AC_CHECK_LIB([ncursesw], [initscr],[],  AC_MSG_ERROR([Curses is needed]))
+
 
 # Checks for header files.
-AC_CHECK_HEADERS([locale.h string.h])
+AC_CHECK_HEADERS([locale.h string.h stdio.h locale.h] ,[],  AC_MSG_ERROR([No some file *.h] ))
+AC_CHECK_HEADERS([ncurses.h] ,[],  AC_MSG_ERROR([No ncurses.h] ))
 
 # Checks for typedefs, structures, and compiler characteristics.
 
