--- a/10_Documenting/Makefile.am
+++ b/10_Documenting/Makefile.am
@@ -1,7 +1,11 @@
 bin_PROGRAMS=guessnumber
+
 pkgdata_DATA=ru/LC_MESSAGES/guessnumber.mo
 
-ru/LC_MESSAGES/guessnumber.mo: ru.po
+	@DX_RULES@
+
+
+ru/LC_MESSAGES/guessnumber.mo:	ru.po
 	mkdir -p `dirname $@`
 	msgfmt $< -o $@
 
@@ -12,3 +16,5 @@ messages.pot:	guessnumber.pot guessnumber.c
 	xgettext -k_ -c guessnumber.c -o messages.new.pot
 	cp guessnumber.pot messages.pot
 	msgmerge -U messages.pot messages.new.pot
+	
+all-local:	doxygen-doc
